Fixed title bar cut off bug in checkout.

--- a/_formals_css.css
+++ b/_formals_css.css
@@ -2161,7 +2161,7 @@ div.checkoutButtonsContainer button.checkoutButton{
     font-family: 'Maven Pro',sans-serif;
     height: 20px;
     letter-spacing: 3px;
-    width: 366px;
+    width: 425px;
 }
 
 .accountCreateContainer{
